# wigvo-v2

./: .env.example  .gitignore  CITATION.cff  CLAUDE.md  LICENSE  README.ko.md  README.md  cloudbuild-relay.yaml  cloudbuild-web.yaml  cloudbuild.yaml  main.py  package-lock.json  package.json  pyproject.toml
apps/relay-server/: .dockerignore  .env.example  .trigger  Dockerfile  README.md  package-lock.json  package.json  paper_metrics.json  pyproject.toml  tail-logs.sh  tsconfig.json
apps/relay-server/migrations/: 001_v3_schema.sql  002_add_communication_fields.sql
apps/relay-server/scripts/: dev_test.py  test_call_client.py
apps/relay-server/scripts/tests/: run.py  spike_text_modality.py
apps/relay-server/src/: call_manager.py  config.py  config.ts  logging_config.py  main.py  server.ts  types.py  types.ts
apps/relay-server/src/db/: call-repository.ts  cost-tracker.ts  migration-v3.sql  (+1 more)
apps/relay-server/static/: test.html
apps/relay-server/tests/: conftest.py  e2e-scenarios.md  helpers.py  run.py  test_api.py  test_audio_router.py  test_call_manager.py  test_chat_translator.py  test_context_manager.py  test_cors_config.py  test_echo_detector.py  test_echo_gate.py  test_echo_gate_manager.py  test_full_agent_pipeline.py  test_function_calling.py  test_guardrail.py  test_incremental_metrics.py  test_local_vad.py  test_logging_config.py  test_max_speech_timer.py  test_rate_limit.py  test_ring_buffer.py  test_session_b_metrics.py  test_speculative_stt.py  test_stt_model_config.py  test_text_to_voice_pipeline.py  test_types.py  test_voice_to_voice_pipeline.py
(+315 files in other folders)
