[project]
name = "wigvo-relay-server"
version = "3.1.0"
description = "WIGVO Realtime Relay Server - AI-powered real-time phone translation"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "websockets>=14.0",
    "twilio>=9.0.0",
    "openai>=1.60.0",
    "supabase>=2.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.18",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "httpx>=0.28.0",
]
